k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: taskboard
spec:
  replicas: 2  # haute disponibilité dès le départ
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: taskboard-api:1.0.0
          imagePullPolicy: IfNotPresent  # évite ErrImagePull avec les images locales
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5   # laisse node démarrer
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15  # laisse du temps pour que la DB soit prête
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: taskboard
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http # nom du port ajouté pour prometheus
      port: 3000
    - port: 3000
      targetPort: 3000
